--- a/iam/iamstyles.css
+++ b/iam/iamstyles.css
@@ -65,6 +65,17 @@ ul {
     -ms-animation:  showIt 4.5s linear forwards;
 }
 
+.appearbasic {
+    margin: 0;
+    position: absolute;
+    top: 45%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    text-align: center; 
+    border-width: 0px; 
+    border-style: none;
+}
+
 input {
     font-family: Georgia, 'Times New Roman', Times, serif; 
     font-weight: bold;
