--- a/iam/iamstyles.css
+++ b/iam/iamstyles.css
@@ -76,6 +76,12 @@ ul {
     border-style: none;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 input {
     font-family: Georgia, 'Times New Roman', Times, serif; 
     font-weight: bold;
